--- a/static/html/index.html
+++ b/static/html/index.html
@@ -1,7 +1,7 @@
 <!-- 通用头部，index是当前页面的入口css -->
 <script src='/html/common/header.js' data-css='index' data-title="首页"></script>
 
-    
+<div class="content">    
 
 	<!-- 顶部图片轮播 -->
 	<div class="carousel">
@@ -16,6 +16,10 @@
 	    </ul>
 	</div>
 
+	<div class="carousel_screen">
+		
+	</div>
+
 	<!-- 首页论文图片展示 -->
 	<div class="display">
 		<ul class="papers">
@@ -26,6 +30,7 @@
 	<!-- 最新新闻 -->
 	<div class="news">
 	</div>
+</div>
 
 <!-- 通用尾部，index是当前页面的入口js -->
 <script src='/html/common/footer.js' data-js='index'></script>
