change 3.0 by qingfan

--- a/static/html/index.html
+++ b/static/html/index.html
@@ -17,7 +17,7 @@
 	</div>
 
 	<div class="carousel_screen">
-		
+
 	</div>
 
 	<!-- 首页论文图片展示 -->
@@ -29,6 +29,12 @@
 
 	<!-- 最新新闻 -->
 	<div class="news">
+		<p class="title">
+	             <span><img src="/img/page/lasted-new.png">最新新闻</span>
+	             <span class="lookMore">查看更多>>>></span>
+        </p>
+        <div class="c">
+        </div>
 	</div>
 </div>
 
