--- a/static/html/listGrads.html
+++ b/static/html/listGrads.html
@@ -1,12 +1,12 @@
 <!-- 通用头部，index是当前页面的入口css -->
-<script src='/html/common/header.js' data-css='leader' data-title='学术带头人'></script>
+<script src='/html/common/header.js' data-css='listGrads' data-title='已毕业成员'></script>
 <div class="outer">
 	<div class="global_center">
 		<!-- 页面标题 -->
 		<div class="list">
 			<div class="vertical_line"></div>
 			<div class="list_text">
-				学术带头人
+				已毕业成员
 			</div>
 		</div>
 		<!-- 列表的容器 -->
@@ -25,4 +25,4 @@
 		</div>	
 	</div>
 </div>
-<script src='/html/common/footer.js' data-js='leader'></script>
+<script src='/html/common/footer.js' data-js='listGrads'></script>
