--- a/static/html/listMembers.html
+++ b/static/html/listMembers.html
@@ -1,12 +1,12 @@
 <!-- 通用头部，index是当前页面的入口css -->
-<script src='/html/common/header.js' data-css='leader' data-title='学术带头人'></script>
+<script src='/html/common/header.js' data-css='leader' data-title='成员介绍'></script>
 <div class="outer">
 	<div class="global_center">
 		<!-- 页面标题 -->
 		<div class="list">
 			<div class="vertical_line"></div>
 			<div class="list_text">
-				学术带头人
+				成员介绍
 			</div>
 		</div>
 		<!-- 列表的容器 -->
