--- a/static/html/listGrads.html
+++ b/static/html/listGrads.html
@@ -1,19 +1,29 @@
-<!-- 通用头部，index是当前页面的入口css -->
 <script src='/html/common/header.js' data-css='listGrads' data-title='已毕业成员'></script>
+
 <div class="outer">
+
 	<div class="global_center">
+
 		<!-- 页面标题 -->
 		<div class="list">
-			<div class="vertical_line"></div>
+
+			<div class="vertical_line">
+			
+			</div>
 			<div class="list_text">
 				已毕业成员
 			</div>
 		</div>
+
 		<!-- 列表的容器 -->
 		<ul id="content">
-			<div class="detial_info"></div>
+			<div class="detial_info">
+				
+			</div>
 		</ul>
+
 	</div>
+
 	<!-- 分页栏 -->
 	<div class="tag">
 		<div>
@@ -24,5 +34,6 @@
 			<a href="#" id="btn2">下一页</a>
 		</div>	
 	</div>
+
 </div>
 <script src='/html/common/footer.js' data-js='listGrads'></script>
