--- a/static/html/news.html
+++ b/static/html/news.html
@@ -1,21 +1,23 @@
 <script src="/html/common/header.js"  data-css="news" data-title="新闻动态"></script>
 
-<div class="main">
+<div class="outer">
 
-  <div class="top">
-      <div class="solid">
+  <div class="global_center">
 
+    <!-- 页面标题 -->
+    <div class="list">
+
+      <div class="vertical_line">
+      
       </div>
 
-      <div class="solids">
-        <div class="one" id="left"></div>
-        <div class="one" id="right"></div>
-      </div>
-
-      <div class="board">
+      <div class="list_text">
         新闻动态
       </div>
+
     </div>
+
+  </div>
 
   <div class="news">
 	  
@@ -25,6 +27,7 @@
   <div class="addMore">
 	  <input type="button" value="Loadmore" id="add">
   </div>
+
 </div>
 
 
