--- a/static/html/news_Detail.html
+++ b/static/html/news_Detail.html
@@ -1,26 +1,24 @@
 <script src="/html/common/header.js" data-css="news_Detail" data-title="新闻详情"></script>
 
 
-<div class="main">
-    
-    <div class="top">
-	    <div class="solid">
+<div class="outer">
 
-	    </div>
+  <div class="global_center">
 
-	    <div class="solids">
-		    <div class="one" id="left"></div>
-		    <div class="one" id="right"></div>
-	    </div>
+    <!-- 页面标题 -->
+    <div class="list">
 
-	    <div class="board">
-		    新闻动态
-	    </div>
+      <div class="vertical_line">
+      
+      </div>
 
-	    <span class="child_title">
-	        >>>新闻详情
-       </span>
+      <div class="list_text">
+        新闻动态
+      </div>
+
     </div>
+
+  </div>
 
     <div class="content">
 
@@ -31,6 +29,7 @@
     </div>
 
 </div>
+
 
 
 
