--- a/static/html/project.html
+++ b/static/html/project.html
@@ -1,22 +1,24 @@
 <script src="/html/common/header.js" data-css="project" data-title="研究成果"></script>
 
-<div class="main">
+<div class="outer">
 
-     <div class="top">
-	    <div class="solid">
+  <div class="global_center">
 
-	    </div>
+    <!-- 页面标题 -->
+    <div class="list">
 
-	    <div class="solids">
-		    <div class="one" id="left"></div>
-		    <div class="one" id="right"></div>
-	    </div>
+      <div class="vertical_line">
+      
+      </div>
 
-	    <div class="board">
-		    研究成果
-	    </div>
+      <div class="list_text">
+        研究成果
+      </div>
 
     </div>
+
+  </div>
+
 
     <div class="content">
 
