--- a/static/html/news_Detail.html
+++ b/static/html/news_Detail.html
@@ -19,11 +19,13 @@
     </div>
 
   </div>
-
+    
+    <!-- 新闻内容 -->
     <div class="content">
 
     </div>
-
+    
+    <!-- 页脚 -->
     <div class="footer">
 
     </div>
