--- a/static/html/dissertation.html
+++ b/static/html/dissertation.html
@@ -7,9 +7,10 @@
 			<div class="vertical_line"></div>
 			<div class="list_text">
 				论文专著
+				<div class="child-title"> >>> 论文详情 </div>
 			</div>
-			<img src="/img/page/arrow.png"/>
-			<p>论文详情</p>
+			
+			
 		</div>
 	<div class="content"></div>
 		
@@ -18,7 +19,7 @@
 		<div>
 			<a href="#" id="btn1">上一页</a>
 			<p>第</p>
-			<input type="text" size="1" id="tag_nub" maxlength="1" value="1" />
+			<input type="text" size="1" id="tag_nub" maxlength="1" value="1" disabled="disabled" />
 			<p>页</p>
 			<a href="#" id="btn2">下一页</a>
 		</div>	
