--- a/static/html/essay_list.html
+++ b/static/html/essay_list.html
@@ -10,19 +10,28 @@
 			</div>
 		</div>
 		<!-- 列表标题 -->
+
 		<div class="title">
+
 			<div class="title_author">
 				作者
 			</div>
+
 			<div class="title_name">
 				论文题目
 			</div>
+
 			<div class="title_time">
 				发表时间
 			</div>
+			
 		</div>
+
 		<!-- 列表的容器 -->
-		<ul id="content"></ul>
+		<ul id="content">
+			
+		</ul>
+
 		<div class="load">load more</div>
 	</div>
 </div>
