--- a/static/html/news_Detail.html
+++ b/static/html/news_Detail.html
@@ -14,11 +14,10 @@
 
       <div class="list_text">
         新闻动态
+        <span class="child_title"> >>>新闻详情 </span>
       </div>
 
-      <span class="child_title">
-          >>>
-      </span>
+      
 
     </div>
 
