--- a/static/html/listMembers.html
+++ b/static/html/listMembers.html
@@ -19,7 +19,7 @@
 		<div>
 			<a href="#" id="btn1">上一页</a>
 			<p>第</p>
-			<input type="text" size="1" id="tag_nub" maxlength="1" value="1" />
+			<input type="text" size="1" id="tag_nub" maxlength="1" value="1" disabled="disabled"/>
 			<p>页</p>
 			<a href="#" id="btn2">下一页</a>
 		</div>	
