--- a/static/html/comProject.html
+++ b/static/html/comProject.html
@@ -1,4 +1,4 @@
-<script src="/html/common/header.js" data-css="comProject" data-title="已完成项目"></script>
+﻿<script src="common/header.js" data-css="comProject" data-title="已完成项目"></script>
 
 <div class="outer">
 
@@ -47,4 +47,4 @@
 
 </div>
 
-<script src="/html/common/footer.js" data-js="comProject"></script>
+<script src="common/footer.js" data-js="comProject"></script>
