--- a/static/html/essay_list.html
+++ b/static/html/essay_list.html
@@ -1,5 +1,5 @@
-<!-- 通用头部，index是当前页面的入口css -->
-<script src='/html/common/header.js' data-css='essay_list' data-title='论文专著'></script>
+﻿<!-- 通用头部，index是当前页面的入口css -->
+<script src='common/header.js' data-css='essay_list' data-title='论文专著'></script>
 <div class="outer">
 	<div class="global_center">
 		<!-- 页面标题 -->
@@ -36,4 +36,4 @@
 	</div>
 </div>
 
-<script src='/html/common/footer.js' data-js='essay_list'></script>
+<script src='common/footer.js' data-js='essay_list'></script>
