--- a/static/html/index.html
+++ b/static/html/index.html
@@ -1,5 +1,5 @@
-<!-- 通用头部，index是当前页面的入口css -->
-<script src='/html/common/header.js' data-css='index' data-title="首页"></script>
+﻿<!-- 通用头部，index是当前页面的入口css -->
+<script src='common/header.js' data-css='index' data-title="首页"></script>
 
 <div class="content">    
 
@@ -30,7 +30,7 @@
 	<!-- 最新新闻 -->
 	<div class="news">
 		<p class="title">
-	             <span><img src="/img/page/lasted-new.png">最新新闻</span>
+	             <span><img src="/Institute/static/img/page/lasted-new.png">最新新闻</span>
 	             <span class="lookMore">查看更多>>>></span>
         </p>
         <div class="c">
@@ -39,4 +39,4 @@
 </div>
 
 <!-- 通用尾部，index是当前页面的入口js -->
-<script src='/html/common/footer.js' data-js='index'></script>
+<script src='common/footer.js' data-js='index'></script>
