--- a/static/html/listGrads.html
+++ b/static/html/listGrads.html
@@ -1,4 +1,4 @@
-<script src='/html/common/header.js' data-css='listGrads' data-title='已毕业成员'></script>
+﻿<script src='common/header.js' data-css='listGrads' data-title='已毕业成员'></script>
 
 <div class="outer">
 
@@ -36,4 +36,4 @@
 	</div>
 
 </div>
-<script src='/html/common/footer.js' data-js='listGrads'></script>
+<script src='common/footer.js' data-js='listGrads'></script>
