--- a/static/html/listMembers.html
+++ b/static/html/listMembers.html
@@ -1,5 +1,5 @@
-<!-- 通用头部，index是当前页面的入口css -->
-<script src='/html/common/header.js' data-css='leader' data-title='成员介绍'></script>
+﻿<!-- 通用头部，index是当前页面的入口css -->
+<script src='common/header.js' data-css='leader' data-title='成员介绍'></script>
 <div class="outer">
 	<div class="global_center">
 		<!-- 页面标题 -->
@@ -25,4 +25,4 @@
 		</div>	
 	</div>
 </div>
-<script src='/html/common/footer.js' data-js='leader'></script>
+<script src='common/footer.js' data-js='leader'></script>
