--- a/static/html/news_Detail.html
+++ b/static/html/news_Detail.html
@@ -1,4 +1,4 @@
-<script src="/html/common/header.js" data-css="news_Detail" data-title="新闻详情"></script>
+﻿<script src="common/header.js" data-css="news_Detail" data-title="新闻详情"></script>
 
 
 <div class="outer">
@@ -43,4 +43,4 @@
 
 
 
-<script src="/html/common/footer.js" data-js="news_Detail"></script>
+<script src="common/footer.js" data-js="news_Detail"></script>
