--- a/static/html/onProject.html
+++ b/static/html/onProject.html
@@ -1,4 +1,4 @@
-<script src="/html/common/header.js" data-css="onProject" data-title="在研项目"></script>
+﻿<script src="common/header.js" data-css="onProject" data-title="在研项目"></script>
 
 <div class="outer">
 
@@ -46,4 +46,4 @@
 
 </div>
 
-<script src="/html/common/footer.js" data-js="onProject"></script>
+<script src="common/footer.js" data-js="onProject"></script>
