--- a/static/html/project.html
+++ b/static/html/project.html
@@ -1,4 +1,4 @@
-<script src="/html/common/header.js" data-css="project" data-title="研究成果"></script>
+﻿<script src="common/header.js" data-css="project" data-title="研究成果"></script>
 
 <div class="outer">
 
@@ -64,4 +64,4 @@
 
 </div>
 
-<script src="/html/common/footer.js" data-js="project"></script>
+<script src="common/footer.js" data-js="project"></script>
