--- a/static/html/dissertation.html
+++ b/static/html/dissertation.html
@@ -1,5 +1,5 @@
-<!-- 通用头部，index是当前页面的入口css -->
-<script src='/html/common/header.js' data-css='dissertation' data-title='论文详情'></script>
+﻿<!-- 通用头部，index是当前页面的入口css -->
+<script src='common/header.js' data-css='dissertation' data-title='论文详情'></script>
 
 <div class="outer">
 	<div class="global_center">
@@ -26,4 +26,4 @@
 	</div>
 </div>
 
-<script src='/html/common/footer.js' data-js='dissertation'></script>	
+<script src='common/footer.js' data-js='dissertation'></script>	
