--- a/static/html/news.html
+++ b/static/html/news.html
@@ -1,4 +1,4 @@
-<script src="/html/common/header.js"  data-css="news" data-title="新闻动态"></script>
+﻿<script src="common/header.js"  data-css="news" data-title="新闻动态"></script>
 
 <div class="outer">
 
@@ -31,4 +31,4 @@
 </div>
 
 
-<script src="/html/common/footer.js" data-js="news"></script>
+<script src="common/footer.js" data-js="news"></script>
