--- a/static/html/dissertation.html
+++ b/static/html/dissertation.html
@@ -16,7 +16,7 @@
 		
 	</div>
 	<div class="tag">
-		<div>
+		<div id="pageTag">
 			<a href="#" id="btn1">上一页</a>
 			<p>第</p>
 			<input type="text" size="1" id="tag_nub" maxlength="1" value="1" disabled="disabled" />
